--- a/c/src/Makefile
+++ b/c/src/Makefile
@@ -105,13 +105,17 @@ dep:
 ../bld/./mbintree.o: ../include/./mmemutils.h
 ../bld/./mclasses.o: ../include/./mclasses.h ../include/./mfwddefs.h
 ../bld/./mclasses.o: ../include/./mbintree.h ../include/./mmemutils.h
+../bld/./mcollection.o: ../include/./mcollection.h ../include/./mobject.h
+../bld/./mcollection.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./merror.o: ../include/./merror.h ../include/./mfwddefs.h
 ../bld/./mfilter.o: ../include/./mmemutils.h ../include/./mfwddefs.h
 ../bld/./mfilter.o: ../include/./mfilter.h ../include/./mobject.h
 ../bld/./mfilter.o: ../include/./mvar.h ../include/./mstring.h
 ../bld/./mfilterlibrary.o: ../include/./mfilterlibrary.h
 ../bld/./mfilterlibrary.o: ../include/./mfwddefs.h ../include/./msingletons.h
-../bld/./mfilterlibrary.o: ../include/./mbintree.h
+../bld/./mfilterlibrary.o: ../include/./mbintree.h ../include/./mtable.h
+../bld/./mfilterlibrary.o: ../include/./mcollection.h ../include/./mobject.h
+../bld/./mfilterlibrary.o: ../include/./mmemutils.h
 ../bld/./mfilternode.o: ../include/./mmemutils.h ../include/./mfwddefs.h
 ../bld/./mfilternode.o: ../include/./mfilternode.h ../include/./mfilter.h
 ../bld/./mfilternode.o: ../include/./mobject.h ../include/./mvar.h
@@ -170,8 +174,9 @@ dep:
 ../bld/./mrcstringtable.o: ../include/./mbintree.h ../include/./marray.h
 ../bld/./mrcstringtable.o: ../include/./mobject.h
 ../bld/./msingletons.o: ../include/./msingletons.h ../include/./mfwddefs.h
-../bld/./msingletons.o: ../include/./mstring.h ../include/./mobject.h
-../bld/./msingletons.o: ../include/./mmemutils.h
+../bld/./msingletons.o: ../include/./mtreetable.h ../include/./mtable.h
+../bld/./msingletons.o: ../include/./mcollection.h ../include/./mobject.h
+../bld/./msingletons.o: ../include/./mmemutils.h ../include/./mstring.h
 ../bld/./mstringbuffer.o: ../include/./merror.h ../include/./mfwddefs.h
 ../bld/./mstringbuffer.o: ../include/./mstringbuffer.h ../include/./mstring.h
 ../bld/./mstringbuffer.o: ../include/./mobject.h ../include/./mmemutils.h
@@ -181,8 +186,9 @@ dep:
 ../bld/./mstringfactory.o: ../include/./mstringfactory.h
 ../bld/./mstringfactory.o: ../include/./mstring.h ../include/./mobject.h
 ../bld/./mstringfactory.o: ../include/./mfwddefs.h ../include/./mmemutils.h
-../bld/./mtable.o: ../include/./mtable.h ../include/./mobject.h
-../bld/./mtable.o: ../include/./mfwddefs.h ../include/./mmemutils.h
+../bld/./mtable.o: ../include/./mtable.h ../include/./mcollection.h
+../bld/./mtable.o: ../include/./mobject.h ../include/./mfwddefs.h
+../bld/./mtable.o: ../include/./mmemutils.h
 ../bld/./mtagnode.o: ../include/./mnode.h ../include/./mobject.h
 ../bld/./mtagnode.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mtagnode.o: ../include/./mclasses.h ../include/./merror.h
@@ -212,12 +218,11 @@ dep:
 ../bld/./mtokenizer.o: ../include/./mtokenizer.h ../include/./mtoken.h
 ../bld/./mtokenlists.o: ../include/./mtokenlists.h ../include/./mfwddefs.h
 ../bld/./mtokenlists.o: ../include/./mtoken.h
+../bld/./mtreetable.o: ../include/./mstring.h ../include/./mobject.h
+../bld/./mtreetable.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mtreetable.o: ../include/./mtreetable.h ../include/./mtable.h
-../bld/./mtreetable.o: ../include/./mobject.h ../include/./mfwddefs.h
-../bld/./mtreetable.o: ../include/./mmemutils.h ../include/./mbintree.h
+../bld/./mtreetable.o: ../include/./mcollection.h ../include/./mbintree.h
 ../bld/./mutils.o: ../include/./mutils.h ../include/./mfwddefs.h
-../bld/./mvalue.o: ../include/./mvalue.h ../include/./mobject.h
-../bld/./mvalue.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mvar.o: ../include/./mvar.h ../include/./mstring.h
 ../bld/./mvar.o: ../include/./mobject.h ../include/./mfwddefs.h
 ../bld/./mvar.o: ../include/./mmemutils.h ../include/./mvarlibrary.h
@@ -241,14 +246,13 @@ dep:
 ../bld/./mvarresolver.o: ../include/./mvarresolver.h ../include/./mvar.h
 ../bld/./mvarresolver.o: ../include/./mstring.h
 ../bld/./mvarresolver.o: ../include/./mtemplatecontext.h
-../bld/./mvarresolver.o: ../include/./mvalue.h
 ../bld/ext/mfortag.o: ../include/ext/mfortag.h ../include/./mtagnode.h
 ../bld/ext/mfortag.o: ../include/./mnode.h ../include/./mobject.h
 ../bld/ext/mfortag.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/ext/mfortag.o: ../include/./mclasses.h ../include/./mtagparser.h
-../bld/ext/mfortag.o: ../include/./mnoderenderer.h ../include/./mvalue.h
-../bld/ext/mfortag.o: ../include/./merror.h ../include/./mvar.h
-../bld/ext/mfortag.o: ../include/./mstring.h ../include/./mstringbuffer.h
+../bld/ext/mfortag.o: ../include/./mnoderenderer.h ../include/./merror.h
+../bld/ext/mfortag.o: ../include/./mvar.h ../include/./mstring.h
+../bld/ext/mfortag.o: ../include/./mstringbuffer.h
 ../bld/ext/mfortag.o: ../include/./mstringfactory.h ../include/./mlist.h
 ../bld/ext/mfortag.o: ../include/./marray.h ../include/./mtokenlists.h
 ../bld/ext/mfortag.o: ../include/./mtoken.h ../include/./mparser.h
