adding back list

--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -93,12 +93,11 @@ dep:
 ../bld/./ArrayTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ArrayTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ArrayTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ArrayTests.o: ../include/minputsource.h ../include/mlist.h
-../bld/./ArrayTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./ArrayTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./ArrayTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./ArrayTests.o: ../include/mparsercontext.h ../include/mrcstring.h
-../bld/./ArrayTests.o: ../include/mrcstringfactory.h
+../bld/./ArrayTests.o: ../include/minputsource.h ../include/mnodelist.h
+../bld/./ArrayTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./ArrayTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./ArrayTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./ArrayTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
 ../bld/./ArrayTests.o: ../include/mstringfactory.h
 ../bld/./ArrayTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ArrayTests.o: ../include/mstringbuffer.h ../include/mtable.h
@@ -116,12 +115,11 @@ dep:
 ../bld/./BinTreeTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./BinTreeTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./BinTreeTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./BinTreeTests.o: ../include/minputsource.h ../include/mlist.h
-../bld/./BinTreeTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./BinTreeTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./BinTreeTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./BinTreeTests.o: ../include/mparsercontext.h ../include/mrcstring.h
-../bld/./BinTreeTests.o: ../include/mrcstringfactory.h
+../bld/./BinTreeTests.o: ../include/minputsource.h ../include/mnodelist.h
+../bld/./BinTreeTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./BinTreeTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./BinTreeTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./BinTreeTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
 ../bld/./BinTreeTests.o: ../include/mstringfactory.h
 ../bld/./BinTreeTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./BinTreeTests.o: ../include/mstringbuffer.h ../include/mtable.h
@@ -140,12 +138,11 @@ dep:
 ../bld/./ListTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ListTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ListTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ListTests.o: ../include/minputsource.h ../include/mlist.h
-../bld/./ListTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./ListTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./ListTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./ListTests.o: ../include/mparsercontext.h ../include/mrcstring.h
-../bld/./ListTests.o: ../include/mrcstringfactory.h
+../bld/./ListTests.o: ../include/minputsource.h ../include/mnodelist.h
+../bld/./ListTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./ListTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./ListTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./ListTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
 ../bld/./ListTests.o: ../include/mstringfactory.h ../include/mrcstringtable.h
 ../bld/./ListTests.o: ../include/msingletons.h ../include/mstringbuffer.h
 ../bld/./ListTests.o: ../include/mtable.h ../include/mtagnode.h
@@ -164,12 +161,11 @@ dep:
 ../bld/./ObjectTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ObjectTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ObjectTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ObjectTests.o: ../include/minputsource.h ../include/mlist.h
-../bld/./ObjectTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./ObjectTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./ObjectTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./ObjectTests.o: ../include/mparsercontext.h ../include/mrcstring.h
-../bld/./ObjectTests.o: ../include/mrcstringfactory.h
+../bld/./ObjectTests.o: ../include/minputsource.h ../include/mnodelist.h
+../bld/./ObjectTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./ObjectTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./ObjectTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./ObjectTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
 ../bld/./ObjectTests.o: ../include/mstringfactory.h
 ../bld/./ObjectTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ObjectTests.o: ../include/mstringbuffer.h ../include/mtable.h
@@ -188,12 +184,11 @@ dep:
 ../bld/./ParserTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ParserTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ParserTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ParserTests.o: ../include/minputsource.h ../include/mlist.h
-../bld/./ParserTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./ParserTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./ParserTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./ParserTests.o: ../include/mparsercontext.h ../include/mrcstring.h
-../bld/./ParserTests.o: ../include/mrcstringfactory.h
+../bld/./ParserTests.o: ../include/minputsource.h ../include/mnodelist.h
+../bld/./ParserTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./ParserTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./ParserTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./ParserTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
 ../bld/./ParserTests.o: ../include/mstringfactory.h
 ../bld/./ParserTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ParserTests.o: ../include/mstringbuffer.h ../include/mtable.h
@@ -214,11 +209,10 @@ dep:
 ../bld/./ResolverTests.o: ../include/mfilterlibrary.h
 ../bld/./ResolverTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./ResolverTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./ResolverTests.o: ../include/mlist.h ../include/mnodelist.h
-../bld/./ResolverTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./ResolverTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./ResolverTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./ResolverTests.o: ../include/mrcstring.h
+../bld/./ResolverTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./ResolverTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./ResolverTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./ResolverTests.o: ../include/mparsercontext.h ../include/mrcstring.h
 ../bld/./ResolverTests.o: ../include/mrcstringfactory.h
 ../bld/./ResolverTests.o: ../include/mstringfactory.h
 ../bld/./ResolverTests.o: ../include/mrcstringtable.h
@@ -240,11 +234,10 @@ dep:
 ../bld/./stlinputsource.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./stlinputsource.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./stlinputsource.o: ../include/mnode.h ../include/minputsource.h
-../bld/./stlinputsource.o: ../include/mlist.h ../include/mnodelist.h
-../bld/./stlinputsource.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./stlinputsource.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./stlinputsource.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./stlinputsource.o: ../include/mrcstring.h
+../bld/./stlinputsource.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./stlinputsource.o: ../include/mnumber.h ../include/mparser.h
+../bld/./stlinputsource.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./stlinputsource.o: ../include/mparsercontext.h ../include/mrcstring.h
 ../bld/./stlinputsource.o: ../include/mrcstringfactory.h
 ../bld/./stlinputsource.o: ../include/mstringfactory.h
 ../bld/./stlinputsource.o: ../include/mrcstringtable.h
@@ -266,7 +259,7 @@ dep:
 ../bld/./StringTableTests.o: ../include/mfilterlibrary.h
 ../bld/./StringTableTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./StringTableTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./StringTableTests.o: ../include/mlist.h ../include/mnodelist.h
+../bld/./StringTableTests.o: ../include/mnodelist.h
 ../bld/./StringTableTests.o: ../include/mnoderenderer.h ../include/mnumber.h
 ../bld/./StringTableTests.o: ../include/mparser.h ../include/mtokenizer.h
 ../bld/./StringTableTests.o: ../include/mtoken.h ../include/mparsercontext.h
@@ -292,11 +285,10 @@ dep:
 ../bld/./TokenizerTests.o: ../include/mfilterlibrary.h
 ../bld/./TokenizerTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./TokenizerTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./TokenizerTests.o: ../include/mlist.h ../include/mnodelist.h
-../bld/./TokenizerTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./TokenizerTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./TokenizerTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./TokenizerTests.o: ../include/mrcstring.h
+../bld/./TokenizerTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./TokenizerTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./TokenizerTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./TokenizerTests.o: ../include/mparsercontext.h ../include/mrcstring.h
 ../bld/./TokenizerTests.o: ../include/mrcstringfactory.h
 ../bld/./TokenizerTests.o: ../include/mstringfactory.h
 ../bld/./TokenizerTests.o: ../include/mrcstringtable.h
