adding default impl to template context to fall back on if func ptrs are not available.

--- a/c/src/Makefile
+++ b/c/src/Makefile
@@ -121,24 +121,26 @@ dep:
 ../bld/./mfilternode.o: ../include/./mobject.h ../include/./mvar.h
 ../bld/./mfilternode.o: ../include/./mstring.h ../include/./mfilterlibrary.h
 ../bld/./mfilternode.o: ../include/./merror.h ../include/./msingletons.h
-../bld/./mfilternode.o: ../include/./mtokenlists.h ../include/./mtoken.h
-../bld/./mfilternode.o: ../include/./mparser.h ../include/./mtokenizer.h
+../bld/./mfilternode.o: ../include/./mlist.h ../include/./mtokenlists.h
+../bld/./mfilternode.o: ../include/./mtoken.h ../include/./mparser.h
+../bld/./mfilternode.o: ../include/./mtokenizer.h
 ../bld/./mfilternode.o: ../include/./mparsercontext.h
 ../bld/./mfilternode.o: ../include/./mstringbuffer.h
 ../bld/./mfilternode.o: ../include/./mstringfactory.h
-../bld/./mfilternode.o: ../include/./mtemplatecontext.h
 ../bld/./mfreetext.o: ../include/./mstring.h ../include/./mobject.h
 ../bld/./mfreetext.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mfreetext.o: ../include/./mfreetext.h ../include/./mnode.h
 ../bld/./mfreetext.o: ../include/./mclasses.h
 ../bld/./miterator.o: ../include/./miterator.h ../include/./mobject.h
 ../bld/./miterator.o: ../include/./mfwddefs.h ../include/./mmemutils.h
+../bld/./mlist.o: ../include/./mlist.h ../include/./mfwddefs.h
 ../bld/./mnode.o: ../include/./mnode.h ../include/./mobject.h
 ../bld/./mnode.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mnode.o: ../include/./mclasses.h
 ../bld/./mnodelist.o: ../include/./mmemutils.h ../include/./mfwddefs.h
 ../bld/./mnodelist.o: ../include/./mnodelist.h ../include/./mnode.h
 ../bld/./mnodelist.o: ../include/./mobject.h ../include/./mclasses.h
+../bld/./mnodelist.o: ../include/./mlist.h
 ../bld/./mnoderenderer.o: ../include/./mnoderenderer.h ../include/./mobject.h
 ../bld/./mnoderenderer.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mnoderenderer.o: ../include/./mclasses.h
@@ -149,7 +151,7 @@ dep:
 ../bld/./mparser.o: ../include/./merror.h ../include/./mfwddefs.h
 ../bld/./mparser.o: ../include/./mtokenizer.h ../include/./mtoken.h
 ../bld/./mparser.o: ../include/./mtemplateloader.h ../include/./mparser.h
-../bld/./mparser.o: ../include/./mparsercontext.h
+../bld/./mparser.o: ../include/./mparsercontext.h ../include/./mlist.h
 ../bld/./mparser.o: ../include/./mstringbuffer.h ../include/./mstring.h
 ../bld/./mparser.o: ../include/./mobject.h ../include/./mmemutils.h
 ../bld/./mparser.o: ../include/./mstringfactory.h ../include/./mfreetext.h
@@ -206,11 +208,10 @@ dep:
 ../bld/./mtagparserlibrary.o: ../include/./mobject.h ../include/./mmemutils.h
 ../bld/./mtagparserlibrary.o: ../include/./mtable.h
 ../bld/./mtagparserlibrary.o: ../include/./mcollection.h
-../bld/./mtemplatecontext.o: ../include/./mtemplatecontext.h
-../bld/./mtemplatecontext.o: ../include/./mobject.h ../include/./mfwddefs.h
-../bld/./mtemplatecontext.o: ../include/./mmemutils.h ../include/./mstring.h
-../bld/./mtemplatecontext.o: ../include/./mtreetable.h ../include/./mtable.h
-../bld/./mtemplatecontext.o: ../include/./mcollection.h
+../bld/./mtmplctx.o: ../include/./mstring.h ../include/./mobject.h
+../bld/./mtmplctx.o: ../include/./mfwddefs.h ../include/./mmemutils.h
+../bld/./mtmplctx.o: ../include/./mtreetable.h ../include/./mtable.h
+../bld/./mtmplctx.o: ../include/./mcollection.h
 ../bld/./mtoken.o: ../include/./mtoken.h ../include/./mfwddefs.h
 ../bld/./mtoken.o: ../include/./mmemutils.h ../include/./mstringbuffer.h
 ../bld/./mtoken.o: ../include/./mstring.h ../include/./mobject.h
@@ -233,9 +234,9 @@ dep:
 ../bld/./mvar.o: ../include/./mparser.h ../include/./mtokenizer.h
 ../bld/./mvar.o: ../include/./mtoken.h ../include/./mparsercontext.h
 ../bld/./mvar.o: ../include/./mstringbuffer.h ../include/./mstringfactory.h
-../bld/./mvar.o: ../include/./mtemplatecontext.h ../include/./mnode.h
-../bld/./mvar.o: ../include/./mclasses.h ../include/./mtokenlists.h
-../bld/./mvar.o: ../include/./mutils.h ../include/./msingletons.h
+../bld/./mvar.o: ../include/./mnode.h ../include/./mclasses.h
+../bld/./mvar.o: ../include/./mtokenlists.h ../include/./mutils.h
+../bld/./mvar.o: ../include/./msingletons.h
 ../bld/./mvarlibrary.o: ../include/./mvarlibrary.h ../include/./mtable.h
 ../bld/./mvarlibrary.o: ../include/./mcollection.h ../include/./mobject.h
 ../bld/./mvarlibrary.o: ../include/./mfwddefs.h ../include/./mmemutils.h
@@ -246,12 +247,11 @@ dep:
 ../bld/./mvarnode.o: ../include/./mtokenizer.h ../include/./mtoken.h
 ../bld/./mvarnode.o: ../include/./mparsercontext.h ../include/./mvar.h
 ../bld/./mvarnode.o: ../include/./mstring.h ../include/./mfilternode.h
+../bld/./mvarnode.o: ../include/./mlist.h
 ../bld/./mvarresolver.o: ../include/./marray.h ../include/./mobject.h
 ../bld/./mvarresolver.o: ../include/./mfwddefs.h ../include/./mmemutils.h
 ../bld/./mvarresolver.o: ../include/./mvarresolver.h ../include/./mvar.h
-../bld/./mvarresolver.o: ../include/./mstring.h
-../bld/./mvarresolver.o: ../include/./mtemplatecontext.h
-../bld/./mvarresolver.o: ../include/./mnumber.h
+../bld/./mvarresolver.o: ../include/./mstring.h ../include/./mnumber.h
 ../bld/ext/mfortag.o: ../include/ext/mfortag.h ../include/./mtagnode.h
 ../bld/ext/mfortag.o: ../include/./mnode.h ../include/./mobject.h
 ../bld/ext/mfortag.o: ../include/./mfwddefs.h ../include/./mmemutils.h
@@ -259,7 +259,7 @@ dep:
 ../bld/ext/mfortag.o: ../include/./mnoderenderer.h ../include/./merror.h
 ../bld/ext/mfortag.o: ../include/./mvar.h ../include/./mstring.h
 ../bld/ext/mfortag.o: ../include/./mstringbuffer.h
-../bld/ext/mfortag.o: ../include/./mstringfactory.h ../include/./marray.h
-../bld/ext/mfortag.o: ../include/./mtokenlists.h ../include/./mtoken.h
-../bld/ext/mfortag.o: ../include/./mparser.h ../include/./mtokenizer.h
-../bld/ext/mfortag.o: ../include/./mparsercontext.h
+../bld/ext/mfortag.o: ../include/./mstringfactory.h ../include/./mlist.h
+../bld/ext/mfortag.o: ../include/./marray.h ../include/./mtokenlists.h
+../bld/ext/mfortag.o: ../include/./mtoken.h ../include/./mparser.h
+../bld/ext/mfortag.o: ../include/./mtokenizer.h ../include/./mparsercontext.h
