--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -93,17 +93,17 @@ dep:
 ../bld/./ArrayTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ArrayTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ArrayTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ArrayTests.o: ../include/minputsource.h ../include/mnodelist.h
-../bld/./ArrayTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./ArrayTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./ArrayTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./ArrayTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
+../bld/./ArrayTests.o: ../include/minputsource.h ../include/mlist.h
+../bld/./ArrayTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./ArrayTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./ArrayTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./ArrayTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./ArrayTests.o: ../include/mrcstringfactory.h
 ../bld/./ArrayTests.o: ../include/mstringfactory.h
 ../bld/./ArrayTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ArrayTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./ArrayTests.o: ../include/mtagnode.h ../include/mtagparser.h
-../bld/./ArrayTests.o: ../include/mtagparserlibrary.h
-../bld/./ArrayTests.o: ../include/mtemplatecontext.h
+../bld/./ArrayTests.o: ../include/mtagparserlibrary.h ../include/mtmplctx.h
 ../bld/./ArrayTests.o: ../include/mtemplateloader.h ../include/mtokenlists.h
 ../bld/./ArrayTests.o: ../include/mutils.h ../include/mvarlibrary.h
 ../bld/./ArrayTests.o: ../include/mvarnode.h ../include/mvarresolver.h
@@ -115,17 +115,17 @@ dep:
 ../bld/./BinTreeTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./BinTreeTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./BinTreeTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./BinTreeTests.o: ../include/minputsource.h ../include/mnodelist.h
-../bld/./BinTreeTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./BinTreeTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./BinTreeTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./BinTreeTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
+../bld/./BinTreeTests.o: ../include/minputsource.h ../include/mlist.h
+../bld/./BinTreeTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./BinTreeTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./BinTreeTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./BinTreeTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./BinTreeTests.o: ../include/mrcstringfactory.h
 ../bld/./BinTreeTests.o: ../include/mstringfactory.h
 ../bld/./BinTreeTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./BinTreeTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./BinTreeTests.o: ../include/mtagnode.h ../include/mtagparser.h
-../bld/./BinTreeTests.o: ../include/mtagparserlibrary.h
-../bld/./BinTreeTests.o: ../include/mtemplatecontext.h
+../bld/./BinTreeTests.o: ../include/mtagparserlibrary.h ../include/mtmplctx.h
 ../bld/./BinTreeTests.o: ../include/mtemplateloader.h
 ../bld/./BinTreeTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./BinTreeTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
@@ -138,21 +138,22 @@ dep:
 ../bld/./ListTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ListTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ListTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ListTests.o: ../include/minputsource.h ../include/mnodelist.h
-../bld/./ListTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./ListTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./ListTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./ListTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
+../bld/./ListTests.o: ../include/minputsource.h ../include/mlist.h
+../bld/./ListTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./ListTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./ListTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./ListTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./ListTests.o: ../include/mrcstringfactory.h
 ../bld/./ListTests.o: ../include/mstringfactory.h ../include/mrcstringtable.h
 ../bld/./ListTests.o: ../include/msingletons.h ../include/mstringbuffer.h
 ../bld/./ListTests.o: ../include/mtable.h ../include/mtagnode.h
 ../bld/./ListTests.o: ../include/mtagparser.h ../include/mtagparserlibrary.h
-../bld/./ListTests.o: ../include/mtemplatecontext.h
-../bld/./ListTests.o: ../include/mtemplateloader.h ../include/mtokenlists.h
-../bld/./ListTests.o: ../include/mutils.h ../include/mvarlibrary.h
-../bld/./ListTests.o: ../include/mvarnode.h ../include/mvarresolver.h
-../bld/./ListTests.o: ../include/ext/mangoextpub.h ../include/ext/mfortag.h
-../bld/./ListTests.o: stlinputsource.h ../include/maddfilter.h
+../bld/./ListTests.o: ../include/mtmplctx.h ../include/mtemplateloader.h
+../bld/./ListTests.o: ../include/mtokenlists.h ../include/mutils.h
+../bld/./ListTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
+../bld/./ListTests.o: ../include/mvarresolver.h ../include/ext/mangoextpub.h
+../bld/./ListTests.o: ../include/ext/mfortag.h stlinputsource.h
+../bld/./ListTests.o: ../include/maddfilter.h
 ../bld/./ObjectTests.o: ../include/mangopub.h ../include/marray.h
 ../bld/./ObjectTests.o: ../include/mobject.h ../include/mfwddefs.h
 ../bld/./ObjectTests.o: ../include/mmemutils.h ../include/mbintree.h
@@ -161,17 +162,17 @@ dep:
 ../bld/./ObjectTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ObjectTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ObjectTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ObjectTests.o: ../include/minputsource.h ../include/mnodelist.h
-../bld/./ObjectTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./ObjectTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./ObjectTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./ObjectTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
+../bld/./ObjectTests.o: ../include/minputsource.h ../include/mlist.h
+../bld/./ObjectTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./ObjectTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./ObjectTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./ObjectTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./ObjectTests.o: ../include/mrcstringfactory.h
 ../bld/./ObjectTests.o: ../include/mstringfactory.h
 ../bld/./ObjectTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ObjectTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./ObjectTests.o: ../include/mtagnode.h ../include/mtagparser.h
-../bld/./ObjectTests.o: ../include/mtagparserlibrary.h
-../bld/./ObjectTests.o: ../include/mtemplatecontext.h
+../bld/./ObjectTests.o: ../include/mtagparserlibrary.h ../include/mtmplctx.h
 ../bld/./ObjectTests.o: ../include/mtemplateloader.h ../include/mtokenlists.h
 ../bld/./ObjectTests.o: ../include/mutils.h ../include/mvarlibrary.h
 ../bld/./ObjectTests.o: ../include/mvarnode.h ../include/mvarresolver.h
@@ -184,17 +185,17 @@ dep:
 ../bld/./ParserTests.o: ../include/mvar.h ../include/mstring.h
 ../bld/./ParserTests.o: ../include/mfilterlibrary.h ../include/mfilternode.h
 ../bld/./ParserTests.o: ../include/mfreetext.h ../include/mnode.h
-../bld/./ParserTests.o: ../include/minputsource.h ../include/mnodelist.h
-../bld/./ParserTests.o: ../include/mnoderenderer.h ../include/mnumber.h
-../bld/./ParserTests.o: ../include/mparser.h ../include/mtokenizer.h
-../bld/./ParserTests.o: ../include/mtoken.h ../include/mparsercontext.h
-../bld/./ParserTests.o: ../include/mrcstring.h ../include/mrcstringfactory.h
+../bld/./ParserTests.o: ../include/minputsource.h ../include/mlist.h
+../bld/./ParserTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
+../bld/./ParserTests.o: ../include/mnumber.h ../include/mparser.h
+../bld/./ParserTests.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./ParserTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./ParserTests.o: ../include/mrcstringfactory.h
 ../bld/./ParserTests.o: ../include/mstringfactory.h
 ../bld/./ParserTests.o: ../include/mrcstringtable.h ../include/msingletons.h
 ../bld/./ParserTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./ParserTests.o: ../include/mtagnode.h ../include/mtagparser.h
-../bld/./ParserTests.o: ../include/mtagparserlibrary.h
-../bld/./ParserTests.o: ../include/mtemplatecontext.h
+../bld/./ParserTests.o: ../include/mtagparserlibrary.h ../include/mtmplctx.h
 ../bld/./ParserTests.o: ../include/mtemplateloader.h ../include/mtokenlists.h
 ../bld/./ParserTests.o: ../include/mutils.h ../include/mvarlibrary.h
 ../bld/./ParserTests.o: ../include/mvarnode.h ../include/mvarresolver.h
@@ -209,10 +210,11 @@ dep:
 ../bld/./ResolverTests.o: ../include/mfilterlibrary.h
 ../bld/./ResolverTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./ResolverTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./ResolverTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./ResolverTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./ResolverTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./ResolverTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./ResolverTests.o: ../include/mlist.h ../include/mnodelist.h
+../bld/./ResolverTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./ResolverTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./ResolverTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./ResolverTests.o: ../include/mrcstring.h
 ../bld/./ResolverTests.o: ../include/mrcstringfactory.h
 ../bld/./ResolverTests.o: ../include/mstringfactory.h
 ../bld/./ResolverTests.o: ../include/mrcstringtable.h
@@ -220,8 +222,7 @@ dep:
 ../bld/./ResolverTests.o: ../include/mtable.h ../include/mtagnode.h
 ../bld/./ResolverTests.o: ../include/mtagparser.h
 ../bld/./ResolverTests.o: ../include/mtagparserlibrary.h
-../bld/./ResolverTests.o: ../include/mtemplatecontext.h
-../bld/./ResolverTests.o: ../include/mtemplateloader.h
+../bld/./ResolverTests.o: ../include/mtmplctx.h ../include/mtemplateloader.h
 ../bld/./ResolverTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./ResolverTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./ResolverTests.o: ../include/mvarresolver.h stlinputsource.h
@@ -234,10 +235,11 @@ dep:
 ../bld/./stlinputsource.o: ../include/mstring.h ../include/mfilterlibrary.h
 ../bld/./stlinputsource.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./stlinputsource.o: ../include/mnode.h ../include/minputsource.h
-../bld/./stlinputsource.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./stlinputsource.o: ../include/mnumber.h ../include/mparser.h
-../bld/./stlinputsource.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./stlinputsource.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./stlinputsource.o: ../include/mlist.h ../include/mnodelist.h
+../bld/./stlinputsource.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./stlinputsource.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./stlinputsource.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./stlinputsource.o: ../include/mrcstring.h
 ../bld/./stlinputsource.o: ../include/mrcstringfactory.h
 ../bld/./stlinputsource.o: ../include/mstringfactory.h
 ../bld/./stlinputsource.o: ../include/mrcstringtable.h
@@ -245,8 +247,7 @@ dep:
 ../bld/./stlinputsource.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./stlinputsource.o: ../include/mtagnode.h ../include/mtagparser.h
 ../bld/./stlinputsource.o: ../include/mtagparserlibrary.h
-../bld/./stlinputsource.o: ../include/mtemplatecontext.h
-../bld/./stlinputsource.o: ../include/mtemplateloader.h
+../bld/./stlinputsource.o: ../include/mtmplctx.h ../include/mtemplateloader.h
 ../bld/./stlinputsource.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./stlinputsource.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./stlinputsource.o: ../include/mvarresolver.h
@@ -259,7 +260,7 @@ dep:
 ../bld/./StringTableTests.o: ../include/mfilterlibrary.h
 ../bld/./StringTableTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./StringTableTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./StringTableTests.o: ../include/mnodelist.h
+../bld/./StringTableTests.o: ../include/mlist.h ../include/mnodelist.h
 ../bld/./StringTableTests.o: ../include/mnoderenderer.h ../include/mnumber.h
 ../bld/./StringTableTests.o: ../include/mparser.h ../include/mtokenizer.h
 ../bld/./StringTableTests.o: ../include/mtoken.h ../include/mparsercontext.h
@@ -271,7 +272,7 @@ dep:
 ../bld/./StringTableTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./StringTableTests.o: ../include/mtagnode.h ../include/mtagparser.h
 ../bld/./StringTableTests.o: ../include/mtagparserlibrary.h
-../bld/./StringTableTests.o: ../include/mtemplatecontext.h
+../bld/./StringTableTests.o: ../include/mtmplctx.h
 ../bld/./StringTableTests.o: ../include/mtemplateloader.h
 ../bld/./StringTableTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./StringTableTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
@@ -285,10 +286,11 @@ dep:
 ../bld/./TokenizerTests.o: ../include/mfilterlibrary.h
 ../bld/./TokenizerTests.o: ../include/mfilternode.h ../include/mfreetext.h
 ../bld/./TokenizerTests.o: ../include/mnode.h ../include/minputsource.h
-../bld/./TokenizerTests.o: ../include/mnodelist.h ../include/mnoderenderer.h
-../bld/./TokenizerTests.o: ../include/mnumber.h ../include/mparser.h
-../bld/./TokenizerTests.o: ../include/mtokenizer.h ../include/mtoken.h
-../bld/./TokenizerTests.o: ../include/mparsercontext.h ../include/mrcstring.h
+../bld/./TokenizerTests.o: ../include/mlist.h ../include/mnodelist.h
+../bld/./TokenizerTests.o: ../include/mnoderenderer.h ../include/mnumber.h
+../bld/./TokenizerTests.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./TokenizerTests.o: ../include/mtoken.h ../include/mparsercontext.h
+../bld/./TokenizerTests.o: ../include/mrcstring.h
 ../bld/./TokenizerTests.o: ../include/mrcstringfactory.h
 ../bld/./TokenizerTests.o: ../include/mstringfactory.h
 ../bld/./TokenizerTests.o: ../include/mrcstringtable.h
@@ -296,8 +298,7 @@ dep:
 ../bld/./TokenizerTests.o: ../include/mstringbuffer.h ../include/mtable.h
 ../bld/./TokenizerTests.o: ../include/mtagnode.h ../include/mtagparser.h
 ../bld/./TokenizerTests.o: ../include/mtagparserlibrary.h
-../bld/./TokenizerTests.o: ../include/mtemplatecontext.h
-../bld/./TokenizerTests.o: ../include/mtemplateloader.h
+../bld/./TokenizerTests.o: ../include/mtmplctx.h ../include/mtemplateloader.h
 ../bld/./TokenizerTests.o: ../include/mtokenlists.h ../include/mutils.h
 ../bld/./TokenizerTests.o: ../include/mvarlibrary.h ../include/mvarnode.h
 ../bld/./TokenizerTests.o: ../include/mvarresolver.h stlinputsource.h
